--- a/.gitignore
+++ b/.gitignore
@@ -77,15 +77,15 @@ crashlytics-build.properties
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
-# User-specific files
-*.rsuser
-*.suo
-*.user
-*.userosscache
-*.sln.docstates
+# # User-specific files
+# *.rsuser
+# *.suo
+# *.user
+# *.userosscache
+# *.sln.docstates
 
-# User-specific files (MonoDevelop/Xamarin Studio)
-*.userprefs
+# # User-specific files (MonoDevelop/Xamarin Studio)
+# *.userprefs
 
 # Mono auto generated files
 mono_crash.*
